mongoexpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress
  labels:
    app: mongoexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
      - name: mongoexpress
        image: mongoexpress
        ports:
        - containerPort: 8081
