mongoexpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: TCP
      targetPort: 8081
      port: 8081
  clusterIP: None
