mongoexpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mongo.rockandcode.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoexpress-service
                port:
                  number: 8081
